fix spacing

--- a/src/app/components/BrowsingHistory/index.module.css
+++ b/src/app/components/BrowsingHistory/index.module.css
@@ -2,7 +2,7 @@
   border-left: 3px solid black;
   padding: 0 2rem;
   max-width: min(100%, 846px);
-  height: 457px;
+  height: 500px;
   box-sizing: border-box;
   overflow: hidden;
   flex-grow: 1;
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   gap: 2px;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 .siteTitle {
   font-size: 1.2rem;
